--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>I am a index.html.</h1>
+<!DOCTYPE html>
+<html>
+<head>
+</head>
+<body>
+	<img src="http://farm6.staticflickr.com/5269/5695429927_32ec1b296b.jpg"/>
+	<br/>
+	<h1>It's my Favourite,Favourite,Favourite,my top concern !</h1>
+</body>
+</html>
+
