--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 	<img src="http://farm6.staticflickr.com/5269/5695429927_32ec1b296b.jpg"/>
 	<br/>
-	<h1>It's my Favourite,Favourite,Favourite,my top concern !</h1>
+	<h1>It's my Favourite,Favourite,Favourite,My Top Concern !</h1>
 </body>
 </html>
 
