--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 	<img src="http://farm6.staticflickr.com/5269/5695429927_32ec1b296b.jpg"/>
 	<br/>
-	<h1>It's my Favourite,Favourite,Favourite,My Top Concern !</h1>
+	<h1>It's my Favourite!</h1>
+	<h1>It's my Top Concern!</h1>
 </body>
 </html>
 
