--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
 </head>
 <body>
-	<img src="http://farm6.staticflickr.com/5269/5695429927_32ec1b296b.jpg"/>
-	<br/>
-	<a class="nes-btn" href="#">It's my</a>
-	<button type="button" class="nes-btn is-primary">Favourite</button>
-	<button type="button" class="nes-btn is-success">Top Concern</button>
+	<img src="http://farm6.staticflickr.com/5269/5695429927_32ec1b296b.jpg" style="margin:20px"/>
 	
+	<section>
+		<a class="nes-btn" href="#">It's my</a>
+		<button type="button" class="nes-btn is-primary">Favourite</button>
+		<button type="button" class="nes-btn is-success">Top Concern</button>
+	</section>
 </body>
 </html>
 
