--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
 <body>
 	<img src="http://farm6.staticflickr.com/5269/5695429927_32ec1b296b.jpg" style="margin:20px"/>
 	
-	<section>
-		<a class="nes-btn" href="#">It's my</a>
+	<section style="margin:20px">
+		<a class="nes-btn" href="#">My</a>
 		<button type="button" class="nes-btn is-primary">Favourite</button>
 		<button type="button" class="nes-btn is-success">Top Concern</button>
+	</section>
+	<section style="margin:20px">
+		<a class="nes-btn" href="#">Her</a>
+		
+		<section class="icon-list">
+		  <!-- controllers -->
+		  <i class="nes-logo"></i>
+		  <i class="nes-jp-logo"></i>
+		  <i class="snes-logo"></i>
+		  <i class="snes-jp-logo"></i>
+		</section>
+		
+		<section class="icon-list">
+		  <i class="nes-mario"></i>
+		  <i class="nes-mario"></i>
+		  <i class="nes-mario"></i>
+		</section>
 	</section>
 </body>
 </html>
